public/css/main.css
@font-face {
    font-family: 'FontAwesome';
    src: url('../font/fontawesome-webfont.eot?v=3.0.1');
    src: url('../font/fontawesome-webfont.eot?#iefix&v=3.0.1') format('embedded-opentype'),
        url('../font/fontawesome-webfont.woff?v=3.0.1') format('woff'),
        url('../font/fontawesome-webfont.ttf?v=3.0.1') format('truetype');
    font-weight: normal;
    font-style: normal;
}

html {
    font-size: 12px;
    overflow-x: auto;
    font-family:Arial,Verdana,Sans-serif;
    overflow-x: hidden;
}

hr {
    margin: 0;
    padding: 0;
}

.mx-component, .mx-component .content {
    outline: 0px solid transparent;
}

.mx-component-over {
    outline: 1px dashed #444 !important;
}

#selection-container{
    outline: 1px solid orange;
    cursor: move !important;
}

.component-menu-buttons {
    position: absolute;
    top: -20px;
}

#container {
    width:980px;
    height: 100%;
    position:absolute;
    top:0;
    left:50%;
    margin-left: -490px;
}

.form {
    background-color: rgba(204,204,204,0.9);
    border-top-left-radius: 6px;
    border-top-right-radius: 6px;
}

.form li{
    padding: 8px;
}

.form label {
    display:block;
    color: #4a4a4a;
    /*font-weight: bold;*/
    margin-bottom: 9px;
}

.form input {
    border-radius: 6px;
    border-width: 0;
    /*padding: 0 5px 0 5px;*/
    padding: 5px;
    outline: 0px;
    background-color: #e6e6e6;
}

.form input[type="text"] {
    width: 230px;
}

.form input[type="radio"], .form input[type="radio"] + label, .form input[type="checkbox"], .form input[type="checkbox"] + label {
    display: inline-block;
}

.form input[type="radio"] + label, .form input[type="checkbox"] + label {
    position:relative;
    top:-2px;
}

.form textarea {
    border-radius: 6px;
    border-width: 0px;
    width: 230px;
    height: 100px;
    outline: 0px;
    background-color: #e6e6e6;
    padding: 5px;
}

.form label.checkbox-label {
    position:relative;
    top:-3px;
    display:inline-block;
}

.menu-form input:not([type="checkbox"]), .menu-form textarea {
    width: 250px;
    color: #a39c96;
}

.flexly-background-image {
    overflow: hidden;
}

